[BACKEND] El catalogo conserva el orden del fichero
Map.copyOf no respeta ningun orden, asi que GET /api/v1/catalog devolvia
las cartas barajadas de un arranque a otro y el YAML esta ordenado a
proposito: recon primero y las caras al final.

Lo destapo un test de integracion intermitente que cogia "la primera carta"
y a veces le tocaba un power-up que no cabia en el presupuesto.